# object_detectors

./: .gitignore  README.md  main.py  requirements.txt
drawer/: DrawScript.py  Drawer.py
modules/cpp_trt_object_detector/: CMakeLists.txt  object_detector.py
modules/cpp_trt_object_detector/cmake/: cuda_stuff.cmake  find_tensorrt.cmake
modules/cpp_trt_object_detector/modules/: calibrator.cpp  calibrator.h  class_detector.cpp  class_detector.h  class_yolo_detector.hpp  ds_image.cpp  kernel.cu  logger.cc  logger.h  plugin_factory.cpp  plugin_factory.h  trt_utils.cpp  trt_utils.h  yolo.cpp  yolo.h  yolo_config_parser.cpp  yolo_config_parser.h  yoloplugin_lib.cpp  yoloplugin_lib.h  yolov2.cpp  yolov2.h  yolov3.cpp  yolov3.h
modules/cpp_trt_object_detector/samples/: sample_detector.cpp
modules/cpp_trt_object_detector/wrapper/: pydetector.cc
modules/tf_object_detector/: model.py  object_detector.py
modules/trt_object_detector/: object_detector.py  trt_yolov3.py
modules/trt_object_detector/from_onnx_to_tensorrt/: onnx_to_tensorrt.py
modules/trt_object_detector/models/: readme.txt
modules/trt_object_detector/utils/: camera.py  yolov3.py
modules_helper/: Borders.py  face_identification_dlc.py
modules_helper/deep_sort_tracker_helper/: deep_sort_tracker_helper.py  types.py
modules_helper/deep_sort_tracker_helper/deep_sort/: detection.py  track.py  tracker.py
modules_helper/deep_sort_tracker_helper/model_data/: readme.txt
modules_helper/deep_sort_tracker_helper/tools/: generate_detections.py
